--- a/blog/hugo.toml
+++ b/blog/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://franta.us'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'ananke'
