Added to the about me page

--- a/hugo.toml
+++ b/hugo.toml
@@ -22,6 +22,9 @@ copyright = "&copy; 2024, Frantisek Bartik"
         url = "/posts/"
         weight = -100
 
+[permalinks]
+  about = "/"
+
 [params]
     description = "My personal page"
     header_title = 'Frantisek "Franta" Bartik'
