--- a/hugo.toml
+++ b/hugo.toml
@@ -7,6 +7,7 @@ relativeURLs = true
 enableEmoji = true
 enableRobotsTXT = true
 copyright = "&copy; 2024, Frantisek Bartik"
+googleAnalytics = "G-XZRLF6V6B8"
 
 [menu]
     [[menu.main]]
