--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,5 +29,6 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.IMAGE }}:${{ github.sha }}-${{ github.run_number }}
